@@ -866,3 +866,7 @@
 2012-12-29  Mike Blumenkrantz
 
         * Tooltips now correctly set NETWM tooltip window type
+
+2013-01-03  JaeHyun Jo (jae_hyun@cho@naver.com)
+
+        * Fix the naviframe item part text to be set properly.
